# lemon-3

./: .cproject  .gitignore  .gitmodules  .project  README  README.md  XY.h  gltext.c  sdldlines.c
data/: colors  javascript.coffee  javascript.js  l1  world  world.yml
demos/: flipflop.c
demos/atlantis/: atlantis.c  dolphin.c  minixpm.c  sea-texture.xpm
libs/ftgl-2.1.3~rc5/src/: FTUnicode.h
libs/json-c-0.9/: configure
libs/pstreams-0.7.0/: ChangeLog  MANIFEST
src/: Makefile  buttons.cpp  cam.cpp  cam.h  cls  debug  events.cpp  face.cpp  fontwatcher.cpp  ftw.cpp  getexecname.c  ggg.cpp  gl.c  initsdl.c  inpipe.cpp  js.cpp  l  lemon-pixel-city.c  lemon.cpp  listdir.c  logger.cpp  logmelogme.cpp  logmelogme.h  loopback  makemessage.c  mathhelp.c  mplayer.cpp  nerverot.cpp  obj.cpp  osk.cpp  py.cpp  quack.c  screenshot.c  serializable.h  settingz.cpp  spectrum_analyzer.cpp  stop  terminal.cpp  test.cpp  text.cpp  (+1 more)
src/demos/: flipflop.c  nerverot.cpp  spectrum_analyzer.cpp
src/demos/atlantis/: atlantis.c  shark.c  whale.c
src/demos/nerverot/: factors  nerverot.c  setupBlots  stolenfromglu
toys/font-edit/: build  fontedit.c  s3dlines.c
toys/spectrum-analyzer/audaciousplugin/: Makefile.in  aclocal.m4  configure  configure.ac
toys/spectrum-analyzer/audaciousplugin/src/: Makefile.am  Makefile.in  plugin_main.c
toys/spectrum-analyzer/xmmsplugin/: Makefile.in  README  aclocal.m4  configure  configure.ac
toys/spectrum-analyzer/xmmsplugin/doc/: usage_instructions.txt
toys/spectrum-analyzer/xmmsplugin/src/: Makefile.am  Makefile.in  plugin_main.c
(+7 files in other folders)
